# internal-it_automation_chef-roaster

./: .env  .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: deploy.yml
src/: bedrock.py  main.py  utils.py
src/prompts/: descriptions.txt
src/roasts/: ali.txt  andrea.txt  anne.txt  ashkan.txt  bram.txt  davide.txt  farbod.txt  federico.txt  jane.txt  kiarash.txt  mahdokht.txt  melvyn.txt  pejman.txt  rehan.txt  shahin.txt  soheil.txt
src/static/css/: styles.css
src/static/js/: script.js
src/templates/: footer.html  github.html  header.html  index.html
