[tool.poetry]
name = "chef-roaster"
version = "0.1.0"
description = ""
authors = ["Soheil Sheybani <soheil@datachef.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
boto3 = "^1.35.73"
aws-wsgi = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
