[tool.poetry]
name = "chef-roaster"
version = "0.1.0"
description = ""
authors = ["Soheil Sheybani <soheil@datachef.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.0.3"
boto3 = "^1.35.73"
aws-wsgi = "^0.2.7"
werkzeug = "2.0.3"
markupsafe = "2.0.1"
openai = "0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
